Buttons renamed Working on design

--- a/main/static/main/less/main.less
+++ b/main/static/main/less/main.less
@@ -600,7 +600,26 @@ padding-top: 10px;
 
 }
 
+
 }
+
+.post-edit-link {
+  float: right;
+  display: block;
+  font-style: italic;
+  color: #57857c;
+
+}
+
+.post-status{
+  float: right;
+  clear: both;
+}
+
+ #post-block {
+ margin: 20px 0 10px 0;
+}
+
 
 }
 
