Rambler top 100 counter added

--- a/main/templates/main/base/_bottom_scripts.html
+++ b/main/templates/main/base/_bottom_scripts.html
@@ -71,4 +71,16 @@ $("#search-form").trigger('submit');
 <noscript><div><img src="https://mc.yandex.ru/watch/35597995" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
 <!-- /Yandex.Metrika counter -->
 
+    <!-- begin of Top100 code -->
+
+<script id="top100Counter" type="text/javascript" src="http://counter.rambler.ru/top100.jcn?4413399"></script>
+<noscript>
+<a href="http://top100.rambler.ru/navi/4413399/">
+<img src="http://counter.rambler.ru/top100.cnt?4413399" alt="Rambler's Top100" border="0" />
+</a>
+
+</noscript>
+<!-- end of Top100 code -->
+
+
 {% endif %}
