Recent recipes and best recipes added

--- a/main/static/main/less/main.less
+++ b/main/static/main/less/main.less
@@ -727,7 +727,8 @@ body{
 }
 
 
-.comments-portlet{
+.comments-portlet, .posts-portlet{
+
     border: 3px solid #528177;
     margin-top: 10px;
     padding-left: 4px;
