Mission page added

--- a/main/static/main/less/main.less
+++ b/main/static/main/less/main.less
@@ -690,6 +690,18 @@ body{
     float: left;
 }
 
+#mission-block {
+float: right;
+margin: 10px 5px;
+a {
+  font-family: 'Open Sans',sans-serif;
+    font-style: normal;
+    font-weight: 700;
+    color: #fff;
+    font-size: 14px;
+  }
+}
+
 }
 
 
