--- a/main/templates/main/base/base.html
+++ b/main/templates/main/base/base.html
@@ -51,6 +51,11 @@
         <div class="col-md-offset-1 col-md-3">
 					{% search_form %}
 		</div>
+        <div class="col-xs-8">
+            <div id="mission-block">
+            <a href="{% url 'mission' %}">О проекте</a>
+             </div>
+		</div>
 </div>
 
 
