Ansver to comment focus fixed

--- a/main/templates/main/post/post_detail.html
+++ b/main/templates/main/post/post_detail.html
@@ -390,7 +390,7 @@
                             $('#answer-to-block').removeClass('hidden');
 // var commentBody = $('#comment-body-level-' + level + '-pk-' + pk).html();
                             $('#answer-to-span').html(data);
-                            $('#id_body').focus();
+                            $('#comment-form-inner #id_body').focus();
                         },
                         error: function (data) {
                         }
