Recipe author is shown

--- a/main/static/main/less/main.less
+++ b/main/static/main/less/main.less
@@ -523,6 +523,23 @@ padding-top: 10px;
   margin-left: 10px;
   margin-right: 10px;
 
+  .comment-count {
+    clear: both;
+  }
+
+        .user-block {
+                 margin-left: 10px;
+                 float: left;
+                 .user-info-top {
+                   margin-left: 5px;
+                   a {
+                     color: @btn-menu-bg;
+                     font-size: .85em;
+                     font-style: italic;
+                   }
+                 }
+               }
+
   .post-title {
     font-size: 18px;
     .font_roboto_bold;
@@ -538,8 +555,10 @@ padding-top: 10px;
       list-style-type: disc !important;
     }
 
+
     .related-recipe {
       .recipe-title {
+        clear: both;
         a {
     font-size: 18px;
     font-family: 'Roboto';
@@ -558,6 +577,26 @@ padding-top: 10px;
       height: 1px;
       margin: 10px 0 26px 0;
       }
+
+
+               .user-block {
+                 margin-left: 10px;
+                 float: left;
+                 .user-info-top {
+                   margin-left: 5px;
+                   a {
+                     color: @btn-menu-bg;
+                     font-size: .85em;
+                     font-style: italic;
+                   }
+                 }
+               }
+
+
+  .avatar {
+    float: left;
+  }
+
 
 
     margin-bottom: 10px;
