Recipe buttons fixed

--- a/main/static/main/less/main.less
+++ b/main/static/main/less/main.less
@@ -523,6 +523,11 @@ padding-top: 10px;
   margin-left: 10px;
   margin-right: 10px;
 
+
+  .recipe-mark-buttons {
+    clear: both;
+  }
+
   .comment-count {
     clear: both;
   }
