Mission changed Recipe warning added

--- a/main/static/main/less/main.less
+++ b/main/static/main/less/main.less
@@ -1069,3 +1069,10 @@ label {
 .errorlist {
   color: red;
 }
+
+.recipe-warning {
+  margin: 10px 0 10px 20px;
+  font-size: 0.9em;
+  font-style: italic;
+  color: #0000cc;
+}
