--- a/main/templates/main/static/mission.html
+++ b/main/templates/main/static/mission.html
@@ -5,6 +5,7 @@
 <p>Cайт <a href="{% url 'main-page' %}">Medavi.ru</a> создан для того, чтобы люди могли обмениваться рецептами лечения травами.</p>
 <p>Не секрет, что почти у каждой семьи есть свои рецепты, которые активно используются, иногда передаются из поколения в поколение.</p>
 <p>Мы предлагаем делиться этими рецептами, обсуждать их и... становиться здоровее!</p>
-
+<br>
+<p>Обращаем ваше внимание, что рецепты публикуются посетителями сайта. Перед использованием любого рецепта обязательно проконсультируйтесь со специалистом!</p>
 
 {% endblock content %}
