Added recipes add comment link

--- a/main/static/main/less/main.less
+++ b/main/static/main/less/main.less
@@ -571,6 +571,8 @@ padding-top: 10px;
     font-weight: 700;
     color: #57857c;
           }
+      margin-bottom: 12px;
+
       }
 
       .recipe-body {
@@ -605,7 +607,10 @@ padding-top: 10px;
   .avatar {
     float: left;
   }
+      .post-recipe-comment-link {
+        float: right;
 
+      }
 
 
     margin-bottom: 10px;
@@ -1082,4 +1087,5 @@ label {
   font-size: 0.9em;
   font-style: italic;
   color: #0000cc;
+  clear:both;
 }
