--- a/main/templates/main/widgets/_comments_portlet.html
+++ b/main/templates/main/widgets/_comments_portlet.html
@@ -23,7 +23,7 @@
 
 <div class="comments-portlet-bottom">
 <p>
-    <label>Посчитали полезным: </label>{{ comment.comment_mark }}
+    <label>Посчитали полезным:&nbsp</label>{{ comment.comment_mark }}
   </p>
     <p>
    {% if comment.post.obj.is_plant %}
