--- a/main/templates/main/widgets/_posts_portlet.html
+++ b/main/templates/main/widgets/_posts_portlet.html
@@ -19,7 +19,7 @@
 
 <div class="posts-portlet-bottom">
 <p>
-    <label>Посчитали полезным: </label>{{ obj.user_marks_count }}
+    <label>Посчитали полезным:&nbsp</label>{{ obj.user_marks_count }}
   </p>
     <p>
 
