--- a/main/templates/main/widgets/_user_detail.html
+++ b/main/templates/main/widgets/_user_detail.html
@@ -1,6 +1,6 @@
 <div id="user-detail-top">
-<div><label>Логин:</label>{{ user.username }}</div>
-<div><label>Активность:</label>{{ user.activity }}</div>
-<div><label>Карма:</label>{{ user.karm }}</div>
-<div><label>Дата регистрации:</label>{{ user.date_joined }}</div>
+<div><label>Логин:&nbsp</label>{{ user.username }}</div>
+<div><label>Активность:&nbsp</label>{{ user.activity }}</div>
+<div><label>Карма:&nbsp</label>{{ user.karm }}</div>
+<div><label>Дата регистрации:&nbsp</label>{{ user.date_joined }}</div>
 </div>
