--- a/main/templates/main/widgets/_search_form.html
+++ b/main/templates/main/widgets/_search_form.html
@@ -1,7 +1,7 @@
 <div id="search-block">
     <form method="get" action="{% url 'search' %}" id="search-form">
             {{ search_form.q }}
-<input type="submit" value="Искать">
+<input id="search-form-submit" type="submit" value="Искать">
     </form>
 <div id="autocomplete-suggestions"></div>
 </div>
