Some visual improvements

--- a/main/static/main/less/main.less
+++ b/main/static/main/less/main.less
@@ -5,7 +5,7 @@
 }
 
 .font_open_sans_regular {
-font-family: 'Open Sans';
+font-family: 'Open Sans', sans-serif;
 font-style: normal;
 font-weight: 400;
 }
@@ -560,9 +560,7 @@ padding-top: 10px;
   }
 
   #post-related-list {
-    font-size: 1.1em;
-    margin-left: 20px;
-    margin: 10px;
+    margin-top: 20px;
     border-top: 3px solid #528177;
 
     li {
@@ -571,6 +569,7 @@ padding-top: 10px;
     }
 
     h2 {
+      text-align: center;
       font-size: 20px;
     font-family: 'Roboto';
     font-style: normal;
@@ -1137,6 +1136,17 @@ label {
   margin: 10px 0 10px 20px;
   font-size: 0.9em;
   font-style: italic;
-  color: #0000cc;
+  color: #998;
   clear:both;
+}
+
+
+.breadcrumb {
+  padding: 0;
+  margin-bottom: 0;
+
+  a.active {
+    color: #57857c;
+  }
+
 }
