--- a/main/templates/main/base/_bottom_scripts.html
+++ b/main/templates/main/base/_bottom_scripts.html
@@ -1,7 +1,72 @@
 {% load compress %}
+   <script   src="https://code.jquery.com/jquery-1.11.3.min.js" integrity="sha256-7LkWEzqTdpEfELxcZZlS6wAx5Ff13zZ83lYO2/ujj7g=" crossorigin="anonymous"></script>
 {% compress js %}
 <script>
 $(function () {
+
+
+        var frm = $('#contact-form');
+    frm.on('submit', function () {
+        $.ajax({
+            type: frm.attr('method'),
+            url: frm.attr('action'),
+            data: frm.serialize(),
+            success: function (data) {
+                frm.html(data);
+                $("#contact-form-error").html("");
+            },
+            error: function(data) {
+                $("#contact-form-error").html("Ошибка при отправке формы");
+            }
+        });
+        return false;
+    });
+
+
+    $('#ajax-login-button').click(function(e){
+    var loginForm = $("#ajax-login-form");
+    if (loginForm.length > 0) {
+    $('#login-form-block').html('');
+    }
+    else {
+    $.ajax({
+                        type: 'POST',
+                        url: '{% url 'get-ajax-login-form' %}',
+                        success: function (data) {
+                            $('#login-form-block').html(data);
+                        },
+                        error: function (data) {
+
+                        }
+                    });
+
+}
+});
+
+
+$(document).on('submit', '#ajax-login-form', function(e){
+
+    var loginForm = $('#ajax-login-form');
+
+$.ajax({
+                        type: 'POST',
+                        data: loginForm.serialize(),
+                        url: "{% url 'ajax-login' %}",
+                        success: function (data) {
+                        window.location.href = location.href;
+                        },
+                        error: function (data) {
+                        $('#login-form-block').html(data.responseJSON.html);
+                        }
+                    });
+
+
+e.preventDefault();
+
+
+
+});
+
 
 
 $("#id_q").keyup(function (e) {
