--- a/main/static/main/less/main.less
+++ b/main/static/main/less/main.less
@@ -1150,3 +1150,19 @@ label {
   }
 
 }
+
+.comments {
+  .comment-filter-form {
+  box-shadow: 0 1px 4px 0 rgba(0,0,0,0.2);
+    padding:10px;
+
+  }
+}
+
+
+
+.about {
+  box-shadow: 0 1px 4px 0 rgba(0,0,0,0.2);
+    padding:10px;
+
+}
