http://schema.org schema applied

--- a/main/templates/main/post/post_detail.html
+++ b/main/templates/main/post/post_detail.html
@@ -7,16 +7,18 @@
 
 
     <div class="row">
-    <div id="full-post">
+    <div id="full-post" itemscope itemtype="http://schema.org/Product">
         <input id="post-pk" type="hidden" value="{{ obj.pk }}">
 
-        <h1><a class="post-title" href="{{ obj.get_absolute_url }}">{{ obj }}</a></h1>
+        <h1><span class="post-title" itemprop="name">{{ obj }}</span></h1>
     {% if obj.is_plant %}
         <div class="synonyms">{{ obj.synonyms_text }}</div>
 {% if obj.thumb220 %}
-    <div class="plant-image"><a href="{{ obj.get_absolute_url }}">
+    <div itemscope itemtype="http://schema.org/ImageObject" itemprop="image" class="plant-image"><a href="{{ obj.get_absolute_url }}">
                         <img alt="{{ obj.title }}" class="img-rounded" src="{{ obj.thumb220 }}">
                     </a>
+    <meta itemprop="description" content="{{ obj }}">
+    <meta itemprop="contentUrl" content="{{ obj.thumb220 }}" />
     </div>
     {% endif %}
     {% elif obj.is_recipe %}
@@ -134,12 +136,16 @@
         {% endif %}
                     {% if obj.is_published %}
                     {% if obj.is_plant %}
-                    <div>
-                        <label>Средняя оценка: </label><span id="post-average-mark">{{ obj.average_mark }}</span>(количество оценок: <span id="post-marks-count">{{ obj.marks_count }})</span>
+                     <div itemtype="http://schema.org/AggregateRating" itemscope itemprop="aggregateRating">
+                        <div>
+                        <label>Средняя оценка: </label><span itemprop="ratingValue" id="post-average-mark">{{ obj.average_mark }}</span>(количество оценок: <span itemprop="ratingCount" id="post-marks-count">{{ obj.marks_count }}</span>)
                     </div>
                     {% endif %}
                     <div class="comment-count">
-                        <label>Количество отзывов: </label><span>{{ obj.published_comments_count }}</span>
+                        <label>Количество отзывов: </label><span itemprop="reviewCount">{{ obj.published_comments_count }}</span>
+                    </div>
+                     <meta itemprop="worstRating" content="1">
+                    <meta itemprop="bestRating" content="5">
                     </div>
                     {% if obj.last_comment_date %}
                         <div>
@@ -160,7 +166,7 @@
 
 
                     {% if obj.body %}
-                        <div id="post-block">
+                        <div id="post-block" itemprop="description">
                             {% if obj.show_body_label %}
                                 <h4>{% get_verbose_field_name obj 'body' %}:</h4>
                             {% endif %}
