--- a/main/templates/main/base/base.html
+++ b/main/templates/main/base/base.html
@@ -32,7 +32,7 @@
 {% endblock head %}
 
 
-<body>
+<body itemscope itemtype="http://schema.org/WebPage">
 <div class="container">
 {% block header %}
     <div id="header">
